# multimodal-levels

./: .gitignore  README.md
01-beacon/: .env.example  README.md  forge.py  generator.py  package-lock.json  package.json  pyproject.toml  run_agent.py  verify.py  video.py
01-beacon/agent/: agent.py
01-beacon/src/: beacon.ts  client.ts  identity.ts  run.ts
02-perceive/: .env.example  Dockerfile  README.md  generate_evidence.py  package-lock.json  package.json  pyproject.toml  run_mission.py  spotlight_mcp.py  spotlight_state.py
02-perceive/a2a_crew/: __init__.py  agent.py  analysts.py  run_mission_a2a.py  serve_analyst.py
02-perceive/adk/: .env.example  README.md  pyproject.toml  run.py
02-perceive/adk/crew/: agent.py
02-perceive/agent/: agent.py
02-perceive/agent/agents/: __init__.py  astronomical_analyst.py  botanical_analyst.py  geological_analyst.py
02-perceive/agent/tools/: __init__.py  confirm_tools.py  mcp_tools.py  star_tools.py
02-perceive/evidence/: manifest.json
02-perceive/mcp-server/: .gcloudignore  Dockerfile  main.py  pyproject.toml
02-perceive/outputs/: beacon.json
02-perceive/setup/: setup_star_catalog.py
02-perceive/src/: biomes.ts  client.ts  perceive.ts  perceivers.ts  run.ts  samples.ts
03-interop/: .env.example  README.md  nat_workflow.yml  pyproject.toml  run_mission.py  verify.py
03-interop/agent/: agent.py
03-interop/agent/tools/: __init__.py  a2a_tools.py
03-interop/architect/: Dockerfile  __init__.py  main.py  pyproject.toml
03-interop/outputs/: dispatch.json
04-survivors/: .env.example  README.md  nemo_retriever.py  pyproject.toml  run_mission.py  setup_graph.py  survivor_graph.py  verify.py
04-survivors/agent/: agent.py
04-survivors/agent/tools/: __init__.py  graph_tools.py
04-survivors/outputs/: walk.json
05-live/: .env.example  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
05-live/backend/: main.py
05-live/backend/agent/: agent.py
05-live/exercises/: README.md  _labkit.py  e2_queue_lab.py  e2_raw_sdk.py  e3_stall_clinic.py  e4_memory.py
05-live/exercises/e1_adk_web/nova_live/: agent.py
05-live/frontend/: index.html  package-lock.json  package.json  vite.config.js
05-live/frontend/public/: pcm-processor.js
05-live/frontend/src/: App.jsx  audio.js  styles.css
05-live/src/: client.ts  live.ts  run.ts  wav.ts
06-memory/: .env.example  Dockerfile  README.md  chat.py  package-lock.json  package.json  pyproject.toml  server.py  setup_engine.py  tsconfig.json
06-memory/agent/: agent.py
06-memory/exercises/: README.md  _labkit.py  e1_amnesia_ladder.py  e2_four_kinds.py  e3_not_a_vector_store.py  e4_working_memory.py  e5_the_dream.py
06-memory/src/: client.ts  memory.ts  run.ts  store.ts
07-operate/: .env.example  README.md  bus.py  ops.py  pyproject.toml  run_mission.py  setup_bus.py  verify.py
07-operate/agent/: agent.py
07-operate/outputs/: bus_run.json
08-breach/: .env.example  README.md  guard.py  nim.py  pyproject.toml  run_mission.py  security.py  verify.py
08-breach/agent/: agent.py
08-breach/outputs/: breach_run.json
tools/: gen_deck_diagrams.py  gen_diagrams.py
