[project]
name = "level-03-interop"
version = "0.1.0"
description = "Multimodal Levels · Level 3 (Interop) — real cross-boundary A2A + NeMo Agent Toolkit. A dispatcher discovers a remote Architect's Agent Card and delegates; no hardcoded interface."
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.18.0",
    "google-genai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]
