[project]
name = "location-analyzer-mcp"
version = "0.1.0"
description = "Custom MCP server: multimodal biome analysis tools (image + video/audio) over Streamable HTTP."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
]
